--- a/_site.yml
+++ b/_site.yml
@@ -18,22 +18,14 @@ navbar:
       icon: fa-book
       menu:
         - text: "--- Core Lessons ---"
-        - text: "(Check back later...)"
-        - text: "----"
-        - text: "--- Optional Lessons ---"
-        - text: "(Check back later...)"
-        - text: "----"
-        - text: "--- Homework ---"
-        - text: "(Check back later...)"
-#        - text: "--- Core Lessons ---"
-#        - text: "R Basics"
-#          href: r-basics.html
-#        - text: "Data Frames"
-#          href: r-dataframes.html
-#        - text: "Data Manipulation"
-#          href: r-dplyr-yeast.html
-#        - text: "Tidying data"
-#          href: r-tidy.html
+        - text: "R Basics"
+          href: r-basics.html
+        - text: "Data Frames"
+          href: r-dataframes.html
+        - text: "Data Manipulation"
+          href: r-dplyr-yeast.html
+        - text: "Tidying data"
+          href: r-tidy.html
 #        - text: "Reproducible Research & RMarkdown"
 #          href: r-rmarkdown.html
 #        - text: "Data Visualization"
@@ -42,14 +34,14 @@ navbar:
 #          href: r-ggtree.html
 #        - text: "RNA-seq"
 #          href: r-rnaseq-airway.html
-#        - text: "----"
-#        - text: "--- Optional Lessons ---"
-#        - text: "Essential Statistics with R"
+        - text: "----"
+        - text: "--- Optional Lessons ---"
+        - text: "Essential Statistics with R"
 #          href: r-stats.html
-#        - text: "----"
-#        - text: "--- Homework ---"
-#        - text: "Data Manipulation"
-#          href: r-dplyr-homework.html
+        - text: "----"
+        - text: "--- Homework ---"
+        - text: "Data Manipulation"
+          href: r-dplyr-homework.html
 #        - text: "Data Visualization"
 #          href: r-dataviz-homework.html
 #        - text: "Reproducible Research & RMarkdown"
