--- a/_site.yml
+++ b/_site.yml
@@ -26,8 +26,8 @@ navbar:
           href: r-dplyr-yeast.html
         - text: "Tidying data"
           href: r-tidy.html
-#        - text: "Reproducible Research & RMarkdown"
-#          href: r-rmarkdown.html
+        - text: "Reproducible Research & RMarkdown"
+          href: r-rmarkdown.html
 #        - text: "Data Visualization"
 #          href: r-viz-gapminder.html
 #        - text: "Phylogenetic Trees"
@@ -44,8 +44,8 @@ navbar:
           href: r-dplyr-homework.html
 #        - text: "Data Visualization"
 #          href: r-dataviz-homework.html
-#        - text: "Reproducible Research & RMarkdown"
-#          href: r-rmarkdown-homework.html
+        - text: "Reproducible Research & RMarkdown"
+          href: r-rmarkdown-homework.html
 #        - text: "Essential Statistics"
 #          href: r-stats-homework.html
 #        - text: "RNA-seq Data Analysis"
