--- a/_site.yml
+++ b/_site.yml
@@ -14,9 +14,6 @@ navbar:
     - text: "Data"
       icon: fa-download
       href: "data.html"
-    - text: "courses"
-      icon: fa-download
-      href: r-basics.html
     - text: "Lessons"
       icon: fa-book
       menu:
@@ -53,6 +50,27 @@ navbar:
           href: r-stats-homework.html
         - text: "RNA-seq Data Analysis"
           href: r-rnaseq-homework.html
+      - text: "Past Courses"
+        icon: fa-book
+        menu:
+        - text: "--- Core Lessons ---"
+        - text: "R Basics"
+          href: r-basics.html
+        - text: "Data Frames"
+          href: r-dataframes.html
+        - text: "Data Manipulation"
+          href: r-dplyr-yeast.html
+        - text: "Tidying data"
+          href: r-tidy.html
+        - text: "Reproducible Research & RMarkdown"
+          href: r-rmarkdown.html
+        - text: "Data Visualization"
+          href: r-viz-gapminder.html
+        - text: "Phylogenetic Trees"
+          href: r-ggtree.html
+        - text: "RNA-seq"
+          href: r-rnaseq-airway.html
+        - text: "----"
 
   right:
     - icon: fa-question fa-lg
