--- a/_site.yml
+++ b/_site.yml
@@ -1,7 +1,7 @@
-name: "Metabarcoding Data Processing Workshop"
+name: "Sequencing Data Processing Workshop"
 
 navbar:
-  title: "ICoRRR2020"
+  title: "Bionesia2020"
   icon: fa-home
   type: inverse
   left:
@@ -50,10 +50,10 @@ navbar:
           href: r-stats-homework.html
         - text: "RNA-seq Data Analysis"
           href: r-rnaseq-homework.html
-    - text: "Past Courses"
+    - text: "Courses"
       icon: fa-book
       menu:
-        - text: "--- Core Lessons ---"
+        - text: "--- Basic Course ---"
         - text: "R Basics"
           href: r-basics.html
         - text: "Data Frames"
@@ -71,7 +71,12 @@ navbar:
         - text: "RNA-seq"
           href: r-rnaseq-airway.html
         - text: "----"
-
+        - text: "--- Intermediate Course ---"
+        - text: "R Basics"
+          href: r-basics.html
+        - text: "--- Advance Course ---"
+        - text: "Get to know Qiime2"
+          href: r-basics.html
   right:
     - icon: fa-question fa-lg
       menu:
