--- a/_site.yml
+++ b/_site.yml
@@ -74,10 +74,10 @@ navbar:
         - text: "--- Intermediate Course ---"
         - text: "R Basics"
           href: r-basics.html
-        - text: "--- Advance Coursesss ---"
+        - text: "--- Advance Courses ---"
         - text: "Get to know Qiime2"
           href: Qiime2_Protokol.html
-        - text: "Get to know Qiime234"
+        - text: "Get to know Qiime2345"
           href: Basic_Molecular.html
   right:
     - icon: fa-question fa-lg
