--- a/_site.yml
+++ b/_site.yml
@@ -72,7 +72,7 @@ navbar:
           href: r-rnaseq-airway.html
         - text: "----"
         - text: "--- Intermediate Course ---"
-        - text: "R Basics"
+        - text: "R Basicsss"
           href: r-basics.html
         - text: "--- Advance Courses ---"
         - text: "Get to know Qiime2"
