--- a/_site.yml
+++ b/_site.yml
@@ -86,7 +86,7 @@ navbar:
           href: Editing_Sequence.html
         - text: "Lets move on"
           href: DNA_Barcoding.html
-        - text: "I feel Confidence"
+        - text: "I feel Confident"
           href: DNA_Barcoding.html
 
   right:
