--- a/_site.yml
+++ b/_site.yml
@@ -23,6 +23,10 @@ navbar:
           href: Editing_Sequence.html
         - text: "DNA Barcoding"
           href: DNA_Barcoding.html
+        - text: "Population Genetic"
+          href: GEnetika_Populasi.html
+        - text: "Amova Analysis"
+          href: Analisis_Amova.html
 
 
   right:
